# mopidy-mpd

./: .copier-answers.yml  CHANGELOG.rst  README.md  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  release.yml
mopidy_mpd/: __init__.py  actor.py  dispatcher.py  exceptions.py  ext.conf  formatting.py  network.py  session.py  tokenize.py  translator.py  uri_mapper.py
mopidy_mpd/protocol/: __init__.py  album_art.py  audio_output.py  channels.py  command_list.py  connection.py  current_playlist.py  filter_expressions.py  mount.py  music_db.py  playback.py  reflection.py  status.py  stickers.py  stored_playlists.py  tagtype_list.py
src/mopidy_mpd/: __init__.py  actor.py  context.py  dispatcher.py  exceptions.py  formatting.py  network.py  session.py  tokenize.py  translator.py  types.py  uri_mapper.py
src/mopidy_mpd/protocol/: __init__.py  audio_output.py  channels.py  command_list.py  connection.py  current_playlist.py  mount.py  music_db.py  playback.py  reflection.py  status.py  stickers.py  stored_playlists.py
tests/: __init__.py  dummy_audio.py  path_utils.py  test_actor.py  test_commands.py  test_context.py  test_dispatcher.py  test_exceptions.py  test_extension.py  test_path_utils.py  test_session.py  test_status.py  test_tokenizer.py  test_translator.py
tests/network/: test_connection.py  test_lineprotocol.py  test_server.py  test_utils.py
tests/protocol/: __init__.py  test_albumart.py  test_audio_output.py  test_authentication.py  test_channels.py  test_command_list.py  test_connection.py  test_current_playlist.py  test_idle.py  test_mount.py  test_music_db.py  test_playback.py  test_reflection.py  test_regression.py  test_status.py  test_stickers.py  test_stored_playlists.py
