[metadata]
name = Mopidy-MPD
version = 3.3.0
url = https://github.com/mopidy/mopidy-mpd
author = Stein Magnus Jodal
author_email = stein.magnus@jodal.no
license = Apache License, Version 2.0
license_file = LICENSE
description = Mopidy extension for controlling Mopidy from MPD clients
long_description = file: README.rst
classifiers =
    Environment :: No Input/Output (Daemon)
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Multimedia :: Sound/Audio :: Players


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.11
install_requires =
    Mopidy >= 3.3.0
    Pykka >= 2.0.1
    setuptools


[options.extras_require]
lint =
    ruff
test =
    pytest
    pytest-cov
dev =
    %(lint)s
    %(test)s


[options.packages.find]
exclude =
    tests
    tests.*


[options.entry_points]
mopidy.ext =
    mpd = mopidy_mpd:Extension
